fix: new test cases for OAR102, OAR101, OAR034 and OAR029
- Created JSON and YAML files for OAR102 with one-part-path and valid-with-values examples.
- Added multiple test cases for OAR029 covering various scenarios including array types, data properties, and response schemas.
- Introduced new test cases for OAR101 and OAR102 to validate server URLs and path structures in OpenAPI 3.0.
- Included tests for handling multiple content types in responses for OAR029.